wx-base/include/generated.h

// CLASS: wxConnection
wxClassInfo *wxConnection_CLASSINFO();
wxConnection *wxConnection_new();
wxConnection *wxConnection_new1(void * buffer, size_t size);
bool wxConnection_Advise1(wxConnection * self, const wxString * item, const char * data);
bool wxConnection_Advise2(wxConnection * self, const wxString * item, const wchar_t * data);
bool wxConnection_Advise3(wxConnection * self, const wxString * item, const wxString data);
bool wxConnection_Disconnect(wxConnection * self);
bool wxConnection_Execute1(wxConnection * self, const char * data);
bool wxConnection_Execute2(wxConnection * self, const wchar_t * data);
bool wxConnection_Execute3(wxConnection * self, const wxString data);
bool wxConnection_OnDisconnect(wxConnection * self);
bool wxConnection_OnExec(wxConnection * self, const wxString * topic, const wxString * data);
bool wxConnection_OnStartAdvise(wxConnection * self, const wxString * topic, const wxString * item);
bool wxConnection_OnStopAdvise(wxConnection * self, const wxString * topic, const wxString * item);
bool wxConnection_Poke1(wxConnection * self, const wxString * item, const char * data);
bool wxConnection_Poke2(wxConnection * self, const wxString * item, const wchar_t * data);
bool wxConnection_Poke3(wxConnection * self, const wxString * item, const wxString data);
bool wxConnection_StartAdvise(wxConnection * self, const wxString * item);
bool wxConnection_StopAdvise(wxConnection * self, const wxString * item);
// CLASS: wxConnectionBase
wxClassInfo *wxConnectionBase_CLASSINFO();
// CLASS: wxCriticalSection
void wxCriticalSection_delete(wxCriticalSection *self);
void wxCriticalSection_Enter(wxCriticalSection * self);
bool wxCriticalSection_TryEnter(wxCriticalSection * self);
void wxCriticalSection_Leave(wxCriticalSection * self);
// CLASS: wxCriticalSectionLocker
void wxCriticalSectionLocker_delete(wxCriticalSectionLocker *self);
wxCriticalSectionLocker *wxCriticalSectionLocker_new(wxCriticalSection * criticalsection);
// CLASS: wxDataInputStream
void wxDataInputStream_delete(wxDataInputStream *self);
wxDataInputStream *wxDataInputStream_new(wxInputStream * stream, const wxMBConv * conv);
void wxDataInputStream_BigEndianOrdered(wxDataInputStream * self, bool be_order);
wxMBConv * wxDataInputStream_GetConv(const wxDataInputStream * self);
void wxDataInputStream_Read81(wxDataInputStream * self, wxUint8 * buffer, size_t size);
void wxDataInputStream_Read161(wxDataInputStream * self, wxUint16 * buffer, size_t size);
void wxDataInputStream_Read321(wxDataInputStream * self, wxUint32 * buffer, size_t size);
void wxDataInputStream_Read641(wxDataInputStream * self, wxUint64 * buffer, size_t size);
void wxDataInputStream_ReadFloat1(wxDataInputStream * self, float * buffer, size_t size);
double wxDataInputStream_ReadDouble(wxDataInputStream * self);
void wxDataInputStream_ReadDouble1(wxDataInputStream * self, double * buffer, size_t size);
wxString *wxDataInputStream_ReadString(wxDataInputStream * self);
void wxDataInputStream_SetConv(wxDataInputStream * self, const wxMBConv * conv);
void wxDataInputStream_UseBasicPrecisions(wxDataInputStream * self);
void wxDataInputStream_UseExtendedPrecision(wxDataInputStream * self);
// CLASS: wxDataOutputStream
void wxDataOutputStream_delete(wxDataOutputStream *self);
wxDataOutputStream *wxDataOutputStream_new(wxOutputStream * stream, const wxMBConv * conv);
void wxDataOutputStream_BigEndianOrdered(wxDataOutputStream * self, bool be_order);
wxMBConv * wxDataOutputStream_GetConv(const wxDataOutputStream * self);
void wxDataOutputStream_SetConv(wxDataOutputStream * self, const wxMBConv * conv);
void wxDataOutputStream_UseBasicPrecisions(wxDataOutputStream * self);
void wxDataOutputStream_UseExtendedPrecision(wxDataOutputStream * self);
void wxDataOutputStream_Write81(wxDataOutputStream * self, const wxUint8 * buffer, size_t size);
void wxDataOutputStream_Write161(wxDataOutputStream * self, const wxUint16 * buffer, size_t size);
void wxDataOutputStream_Write321(wxDataOutputStream * self, const wxUint32 * buffer, size_t size);
void wxDataOutputStream_Write641(wxDataOutputStream * self, const wxUint64 * buffer, size_t size);
void wxDataOutputStream_WriteFloat1(wxDataOutputStream * self, const float * buffer, size_t size);
void wxDataOutputStream_WriteDouble(wxDataOutputStream * self, double d);
void wxDataOutputStream_WriteDouble1(wxDataOutputStream * self, const double * buffer, size_t size);
void wxDataOutputStream_WriteString(wxDataOutputStream * self, const wxString * string);
// CLASS: wxDateSpan
void wxDateSpan_delete(wxDateSpan *self);
wxDateSpan *wxDateSpan_new(int years, int months, int weeks, int days);
wxDateSpan *wxDateSpan_Add(const wxDateSpan * self, const wxDateSpan * other);
wxDateSpan * wxDateSpan_Add1(wxDateSpan * self, const wxDateSpan * other);
int wxDateSpan_GetDays(const wxDateSpan * self);
int wxDateSpan_GetMonths(const wxDateSpan * self);
int wxDateSpan_GetTotalMonths(const wxDateSpan * self);
int wxDateSpan_GetTotalDays(const wxDateSpan * self);
int wxDateSpan_GetWeeks(const wxDateSpan * self);
int wxDateSpan_GetYears(const wxDateSpan * self);
wxDateSpan *wxDateSpan_Multiply(const wxDateSpan * self, int factor);
wxDateSpan * wxDateSpan_Multiply1(wxDateSpan * self, int factor);
wxDateSpan * wxDateSpan_Neg(wxDateSpan * self);
wxDateSpan *wxDateSpan_Negate(const wxDateSpan * self);
wxDateSpan * wxDateSpan_SetDays(wxDateSpan * self, int n);
wxDateSpan * wxDateSpan_SetMonths(wxDateSpan * self, int n);
wxDateSpan * wxDateSpan_SetWeeks(wxDateSpan * self, int n);
wxDateSpan * wxDateSpan_SetYears(wxDateSpan * self, int n);
wxDateSpan *wxDateSpan_Subtract(const wxDateSpan * self, const wxDateSpan * other);
wxDateSpan * wxDateSpan_Subtract1(wxDateSpan * self, const wxDateSpan * other);
wxDateSpan *wxDateSpan_Day();
wxDateSpan *wxDateSpan_Days(int days);
wxDateSpan *wxDateSpan_Month();
wxDateSpan *wxDateSpan_Months(int mon);
wxDateSpan *wxDateSpan_Week();
wxDateSpan *wxDateSpan_Weeks(int weeks);
wxDateSpan *wxDateSpan_Year();
wxDateSpan *wxDateSpan_Years(int years);