wx-base/src/generated/ffi.rs


    // wxConnection
    pub fn wxConnection_CLASSINFO() -> *mut c_void;
    pub fn wxConnection_new() -> *mut c_void;
    pub fn wxConnection_new1(buffer: *mut c_void, size: usize) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxConnection_Advise(self_: *mut c_void, item: *const c_void, data: *const c_void, size: usize, format: wxIPCFormat) -> bool;
    pub fn wxConnection_Advise1(
        self_: *mut c_void,
        item: *const c_void,
        data: *const c_void,
    ) -> bool;
    pub fn wxConnection_Advise2(
        self_: *mut c_void,
        item: *const c_void,
        data: *const c_void,
    ) -> bool;
    pub fn wxConnection_Advise3(self_: *mut c_void, item: *const c_void, data: wxString) -> bool;
    pub fn wxConnection_Disconnect(self_: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_Execute(self_: *mut c_void, data: *const c_void, size: usize, format: wxIPCFormat) -> bool;
    pub fn wxConnection_Execute1(self_: *mut c_void, data: *const c_void) -> bool;
    pub fn wxConnection_Execute2(self_: *mut c_void, data: *const c_void) -> bool;
    pub fn wxConnection_Execute3(self_: *mut c_void, data: wxString) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_OnAdvise(self_: *mut c_void, topic: *const c_void, item: *const c_void, data: *const c_void, size: usize, format: wxIPCFormat) -> bool;
    pub fn wxConnection_OnDisconnect(self_: *mut c_void) -> bool;
    pub fn wxConnection_OnExec(
        self_: *mut c_void,
        topic: *const c_void,
        data: *const c_void,
    ) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_OnPoke(self_: *mut c_void, topic: *const c_void, item: *const c_void, data: *const c_void, size: usize, format: wxIPCFormat) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_OnRequest(self_: *mut c_void, topic: *const c_void, item: *const c_void, size: *mut c_void, format: wxIPCFormat) -> *const c_void;
    pub fn wxConnection_OnStartAdvise(
        self_: *mut c_void,
        topic: *const c_void,
        item: *const c_void,
    ) -> bool;
    pub fn wxConnection_OnStopAdvise(
        self_: *mut c_void,
        topic: *const c_void,
        item: *const c_void,
    ) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_Poke(self_: *mut c_void, item: *const c_void, data: *const c_void, size: usize, format: wxIPCFormat) -> bool;
    pub fn wxConnection_Poke1(self_: *mut c_void, item: *const c_void, data: *const c_void)
        -> bool;
    pub fn wxConnection_Poke2(self_: *mut c_void, item: *const c_void, data: *const c_void)
        -> bool;
    pub fn wxConnection_Poke3(self_: *mut c_void, item: *const c_void, data: wxString) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_Request(self_: *mut c_void, item: *const c_void, size: *mut c_void, format: wxIPCFormat) -> *const c_void;
    pub fn wxConnection_StartAdvise(self_: *mut c_void, item: *const c_void) -> bool;
    pub fn wxConnection_StopAdvise(self_: *mut c_void, item: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_IsTextFormat(format: wxIPCFormat) -> bool;
    // NOT_SUPPORTED: pub fn wxConnection_GetTextFromData(data: *const c_void, size: usize, format: wxIPCFormat) -> *mut c_void;

    // wxConnectionBase
    pub fn wxConnectionBase_CLASSINFO() -> *mut c_void;

    // wxCriticalSection
    pub fn wxCriticalSection_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxCriticalSection_new(crit_sec_type: wxCriticalSectionType) -> *mut c_void;
    // DTOR: pub fn wxCriticalSection_~wxCriticalSection(self_: *mut c_void);
    pub fn wxCriticalSection_Enter(self_: *mut c_void);
    pub fn wxCriticalSection_TryEnter(self_: *mut c_void) -> bool;
    pub fn wxCriticalSection_Leave(self_: *mut c_void);

    // wxCriticalSectionLocker
    pub fn wxCriticalSectionLocker_delete(self_: *mut c_void);
    pub fn wxCriticalSectionLocker_new(criticalsection: *mut c_void) -> *mut c_void;
    // DTOR: pub fn wxCriticalSectionLocker_~wxCriticalSectionLocker(self_: *mut c_void);

    // wxDataInputStream
    pub fn wxDataInputStream_delete(self_: *mut c_void);
    pub fn wxDataInputStream_new(stream: *mut c_void, conv: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxDataInputStream_~wxDataInputStream(self_: *mut c_void);
    pub fn wxDataInputStream_BigEndianOrdered(self_: *mut c_void, be_order: bool);
    pub fn wxDataInputStream_GetConv(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDataInputStream_Read8(self_: *mut c_void) -> wxUint8;
    pub fn wxDataInputStream_Read81(self_: *mut c_void, buffer: *mut c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataInputStream_Read16(self_: *mut c_void) -> wxUint16;
    pub fn wxDataInputStream_Read161(self_: *mut c_void, buffer: *mut c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataInputStream_Read32(self_: *mut c_void) -> wxUint32;
    pub fn wxDataInputStream_Read321(self_: *mut c_void, buffer: *mut c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataInputStream_Read64(self_: *mut c_void) -> wxUint64;
    pub fn wxDataInputStream_Read641(self_: *mut c_void, buffer: *mut c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataInputStream_ReadFloat(self_: *mut c_void) -> float;
    pub fn wxDataInputStream_ReadFloat1(self_: *mut c_void, buffer: *mut c_void, size: usize);
    pub fn wxDataInputStream_ReadDouble(self_: *mut c_void) -> c_double;
    pub fn wxDataInputStream_ReadDouble1(self_: *mut c_void, buffer: *mut c_void, size: usize);
    pub fn wxDataInputStream_ReadString(self_: *mut c_void) -> *mut c_void;
    pub fn wxDataInputStream_SetConv(self_: *mut c_void, conv: *const c_void);
    pub fn wxDataInputStream_UseBasicPrecisions(self_: *mut c_void);
    pub fn wxDataInputStream_UseExtendedPrecision(self_: *mut c_void);

    // wxDataOutputStream
    pub fn wxDataOutputStream_delete(self_: *mut c_void);
    pub fn wxDataOutputStream_new(stream: *mut c_void, conv: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxDataOutputStream_~wxDataOutputStream(self_: *mut c_void);
    pub fn wxDataOutputStream_BigEndianOrdered(self_: *mut c_void, be_order: bool);
    pub fn wxDataOutputStream_GetConv(self_: *const c_void) -> *mut c_void;
    pub fn wxDataOutputStream_SetConv(self_: *mut c_void, conv: *const c_void);
    pub fn wxDataOutputStream_UseBasicPrecisions(self_: *mut c_void);
    pub fn wxDataOutputStream_UseExtendedPrecision(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxDataOutputStream_Write8(self_: *mut c_void, i8: wxUint8);
    pub fn wxDataOutputStream_Write81(self_: *mut c_void, buffer: *const c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataOutputStream_Write16(self_: *mut c_void, i16: wxUint16);
    pub fn wxDataOutputStream_Write161(self_: *mut c_void, buffer: *const c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataOutputStream_Write32(self_: *mut c_void, i32: wxUint32);
    pub fn wxDataOutputStream_Write321(self_: *mut c_void, buffer: *const c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataOutputStream_Write64(self_: *mut c_void, i64: wxUint64);
    pub fn wxDataOutputStream_Write641(self_: *mut c_void, buffer: *const c_void, size: usize);
    // NOT_SUPPORTED: pub fn wxDataOutputStream_WriteFloat(self_: *mut c_void, f: float);
    pub fn wxDataOutputStream_WriteFloat1(self_: *mut c_void, buffer: *const c_void, size: usize);
    pub fn wxDataOutputStream_WriteDouble(self_: *mut c_void, d: c_double);
    pub fn wxDataOutputStream_WriteDouble1(self_: *mut c_void, buffer: *const c_void, size: usize);
    pub fn wxDataOutputStream_WriteString(self_: *mut c_void, string: *const c_void);

    // wxDateSpan
    pub fn wxDateSpan_delete(self_: *mut c_void);
    pub fn wxDateSpan_new(years: c_int, months: c_int, weeks: c_int, days: c_int) -> *mut c_void;
    pub fn wxDateSpan_Add(self_: *const c_void, other: *const c_void) -> *mut c_void;
    pub fn wxDateSpan_Add1(self_: *mut c_void, other: *const c_void) -> *mut c_void;
    pub fn wxDateSpan_GetDays(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_GetMonths(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_GetTotalMonths(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_GetTotalDays(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_GetWeeks(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_GetYears(self_: *const c_void) -> c_int;
    pub fn wxDateSpan_Multiply(self_: *const c_void, factor: c_int) -> *mut c_void;
    pub fn wxDateSpan_Multiply1(self_: *mut c_void, factor: c_int) -> *mut c_void;
    pub fn wxDateSpan_Neg(self_: *mut c_void) -> *mut c_void;
    pub fn wxDateSpan_Negate(self_: *const c_void) -> *mut c_void;
    pub fn wxDateSpan_SetDays(self_: *mut c_void, n: c_int) -> *mut c_void;
    pub fn wxDateSpan_SetMonths(self_: *mut c_void, n: c_int) -> *mut c_void;
    pub fn wxDateSpan_SetWeeks(self_: *mut c_void, n: c_int) -> *mut c_void;
    pub fn wxDateSpan_SetYears(self_: *mut c_void, n: c_int) -> *mut c_void;
    pub fn wxDateSpan_Subtract(self_: *const c_void, other: *const c_void) -> *mut c_void;
    pub fn wxDateSpan_Subtract1(self_: *mut c_void, other: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxDateSpan_operator+=(self_: *mut c_void, other: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxDateSpan_operator-=(self_: *mut c_void, other: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxDateSpan_operator-(self_: *mut c_void) -> *mut c_void;
    // BLOCKED: pub fn wxDateSpan_operator*=(self_: *mut c_void, factor: c_int) -> *mut c_void;
    // BLOCKED: pub fn wxDateSpan_operator!=(self_: *const c_void, other: *const c_void) -> bool;
    // BLOCKED: pub fn wxDateSpan_operator==(self_: *const c_void, other: *const c_void) -> bool;
    pub fn wxDateSpan_Day() -> *mut c_void;
    pub fn wxDateSpan_Days(days: c_int) -> *mut c_void;
    pub fn wxDateSpan_Month() -> *mut c_void;
    pub fn wxDateSpan_Months(mon: c_int) -> *mut c_void;
    pub fn wxDateSpan_Week() -> *mut c_void;
    pub fn wxDateSpan_Weeks(weeks: c_int) -> *mut c_void;
    pub fn wxDateSpan_Year() -> *mut c_void;
    pub fn wxDateSpan_Years(years: c_int) -> *mut c_void;
